--- a/shop-project/shop/src/main/webapp/resources/css/style.css
+++ b/shop-project/shop/src/main/webapp/resources/css/style.css
@@ -168,11 +168,12 @@ body {
 	display: flex;
 	width: 100%;
 	height: 100%;
+	padding:20px;
 	flex-wrap: wrap; /* 요소들을 여러 줄에 걸쳐 자동으로 나열하도록 설정 */
 }
 
 .img {
-	width: 220px;
+	width: 230px;
 	height: 360px;
 	padding: 10px;
 	text-align: center; /* 이미지와 설명을 가운데 정렬 */
