--- a/shop-project/shop/src/main/webapp/resources/css/style.css
+++ b/shop-project/shop/src/main/webapp/resources/css/style.css
@@ -688,3 +688,55 @@ input[type="button"] {
 .h-100 {
 	width: 100%;
 }
+
+.order-summary {
+    max-width: 800px;
+    margin: 0 auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1, h2 {
+    color: #333;
+}
+
+.order-info, .payment-info, .payment-method {
+    margin-bottom: 20px;
+}
+
+.order-info p, .payment-info p, .payment-method p {
+    margin: 5px 0;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+table th, table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+table th {
+    background-color: #f2f2f2;
+}
+
+.contact-info {
+    text-align: center;
+    color: #555;
+    margin-top: 20px;
+}
+.login-container {
+	margin: 0 auto;
+    background-color: #ffffff;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+}
